[Temp] remove PAM for CygWin build.
Signed-off-by: jctaoo <jctaoo@outlook.com>
Change-Id: Ifc00fe101392ea7b145d37886d9f933eb2f30786

--- a/Makefile.am
+++ b/Makefile.am
@@ -76,7 +76,9 @@ if !ENABLE_DEBUG
 AM_CPPFLAGS += -DNDEBUG
 endif
 
-AM_LDFLAGS = -pthread -Wl,-E -lpam $(ZLIB_LIBS)
+# For CygWin Build, remote pam
+# AM_LDFLAGS = -pthread -Wl,-E -lpam $(ZLIB_LIBS)
+AM_LDFLAGS = -pthread -Wl,-E $(ZLIB_LIBS)
 
 if ENABLE_SSL
 AM_LDFLAGS += -lssl -lcrypto
