--- a/configure.ac
+++ b/configure.ac
@@ -1124,11 +1124,12 @@ fi
 AM_CONDITIONAL([ENABLE_SSL], [$ENABLE_SSL])
 AC_SUBST(ENABLE_SSL)
 
-AS_IF([test "$ENABLE_ANDROIDAPP" != "true"],
-      [AC_CHECK_HEADERS([security/pam_appl.h],
-                        [],
-                        [AC_MSG_ERROR([header security/pam_appl.h not found, install PAM development package])])
-       AC_CHECK_LIB(pam, pam_start, [], [AC_MSG_ERROR([No. Install PAM development package])])])
+# for CygWin Build
+# AS_IF([test "$ENABLE_ANDROIDAPP" != "true"],
+#      [AC_CHECK_HEADERS([security/pam_appl.h],
+#                        [],
+#                        [AC_MSG_ERROR([header security/pam_appl.h not found, install PAM development package])])
+#       AC_CHECK_LIB(pam, pam_start, [], [AC_MSG_ERROR([No. Install PAM development package])])])
 
 AC_MSG_CHECKING([whether to build with support public key])
 if test "x$with_support_public_key" != "x"; then
